# central-logger-app

./: .gitignore  AGENT.md  README.md  RULE.md  main.py  pyproject.toml  pysidedeploy.spec
.agent/: SKILL_DATABASE_MODBUS.md  SKILL_MVVM_INTEGRATION.md  SKILL_QML_UI.md
.cursor/: settings.json
.github/workflows/: build-release.yml  ci.yml  dev-build.yml  msi-packaging.yml  release.yml
deploy/: central-logger
deploy/resources/: qtquickcontrols2.conf
deploy/resources/native/windows/: README.md
deploy/ui/: Colors.qml  UiMotion.qml  main.qml  qmldir
deploy/ui/components/cards/: PanelCard.qml
deploy/ui/components/charts/: ChartTooltipOverlay.qml
deploy/ui/components/common/: HoverHighlight.qml  LabeledField.qml  MaterialIcons.qml
deploy/ui/components/dialogs/: BaseDialog.qml  ConfirmDialog.qml  EditConfigDialog.qml  LoggerFormCentralColumn.qml  LoggerFormDialog.qml
deploy/ui/components/navigation/: AppSidebar.qml  AppTopBar.qml
deploy/ui/views/: qmldir
deploy/ui/views/dashboard/: DashboardView.qml  NetworkTrafficChart.qml  RecentEventsList.qml
deploy/ui/views/loggerDetail/: LoggerDetailHeader.qml  LoggerDetailView.qml  SensorMonitoringTable.qml  SensorTrendingChart.qml
deploy/ui/views/loggers/: ListHeaderCell.qml  LoggerTableRow.qml  LoggersView.qml
docs/: perf-baseline.md  provision-qr-v1.md  rest-config-contract-v1.md  smoke-validation.md
packaging/windows/: CentralLogger.wixproj  HeatWin64.xslt  Package.wxs  Product.wxs
qml/: main.qml
qml/components/: AddLoggerDialog.qml  AppSidebar.qml  AppTopBar.qml  LoggerCard.qml  LoggerDetailDialog.qml  RoundedSearchBar.qml  SensorCard.qml  StatusPill.qml  qmldir
qml/pages/: DashboardPage.qml  qmldir
resources/: resources.qrc
resources/native/windows/: zbar-dlls.manifest.json
scripts/: bench_ingestion_chart.py  build.ps1  build.sh  build_deb.sh  build_deploy_linux.sh  build_deploy_nuitka_linux.sh  build_deploy_venv.sh  build_deploy_windows.ps1  build_msi.ps1  build_qaterial.sh  bump_version.py  deploy.ps1  deploy.sh  fetch_qaterial.sh  fetch_zbar_windows.py  generate_app_icons.py  github-actions-ci.yml.example  preflight_python_windows.ps1  prepend_msvc_tools.ps1  stage_zbar_windows.ps1  validate_packaging.sh
src/central_logger/: AGENT.md  __init__.py  __main__.py  app_paths.py  main.py  qml_import_paths.py  system_tray.py
src/central_logger/controllers/: __init__.py  chart_queries.py  dashboard_controller.py  event_journal.py  logger_ops.py  modbus_bridge.py  rest_coordinator.py  rest_facade.py  rest_scheduler.py  sensor_state.py  settings_controller.py
src/central_logger/db/: __init__.py  models.py  retention.py  session.py
src/central_logger/services/: __init__.py  modbus_client.py  modbus_manager.py  modbus_map.py  qr_provision.py  rest_config_client.py  sensor_catalog.py
src/central_logger/ui/: AGENT.md  main.qml  qmldir
src/central_logger/ui/components/: qmldir
src/central_logger/utils/: native_libs.py
src/central_logger/viewmodels/: __init__.py  app_state.py  logger_list_model.py  recent_events_model.py  sensor_monitoring_table_model.py
tests/: conftest.py  test_chart_queries.py  test_dashboard_queries.py  test_db.py  test_db_migration.py  test_logger_crud.py  test_logger_list_model.py  test_modbus_manager.py  test_modbus_map.py  test_native_libs.py  test_pysidedeploy_spec.py  test_qr_provision.py  test_rest_config_client.py  test_retention.py  test_sensor_catalog.py  test_sensor_monitoring_table_model.py  test_settings_controller.py  test_smoke_integration.py  test_zbar_manifest.py
(+52 files in other folders)
