[project]
name = "central-logger-app"
version = "0.1.0"
description = "Central management app for Modbus TCP Data Loggers (PySide6 + QML, Material Light)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Central Logger Team" },
]
license = { text = "Proprietary" }
dependencies = [
    "PySide6>=6.11.0",
    "pymodbus>=3.13.0",
    "sqlmodel>=0.0.22",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "pyzbar>=0.1.9",
    "Pillow>=10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-qt>=4.5",
    "pytest-asyncio>=0.23",
    "ruff",
    "black",
]
test = [
    "pytest>=8",
    "pytest-qt>=4.5",
    "pytest-asyncio>=0.23",
    "qrcode>=7",
]
build = [
    "nuitka",
]

[project.scripts]
central-logger = "central_logger.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/central_logger"]

[tool.pytest.ini_options]
qt_api = "pyside6"
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

# PySide6 pyside6-deploy / pyside6-project (removes "no project file" warning)
[tool.pyside6-project]
files = ["src/central_logger/main.py"]
