[project]
name = "central-logger-app"
version = "0.1.6"
description = "Central management app for Modbus TCP Data Loggers (PySide6 + QML, Material Light)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Central Logger Team" },
]
license = { text = "Proprietary" }
dependencies = [
    "PySide6>=6.11.0",
    "pymodbus>=3.13.0",
    "sqlmodel>=0.0.22",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "pyzbar>=0.1.9",
    "Pillow>=10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-qt>=4.5",
    "pytest-asyncio>=0.23",
    "ruff",
    "black",
]
test = [
    "pytest>=8",
    "pytest-qt>=4.5",
    "pytest-asyncio>=0.23",
    "qrcode>=7",
]
build = [
    "nuitka",
    "ziglang",
]

[project.scripts]
central-logger = "central_logger.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/central_logger"]

[tool.pytest.ini_options]
qt_api = "pyside6"
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

# PySide6 pyside6-deploy / pyside6-project (project file resolution for deploy)
[tool.pyside6-project]
files = [
    "src/central_logger/main.py",
    "src/central_logger/app_paths.py",
    "src/central_logger/system_tray.py",
    "src/central_logger/controllers/__init__.py",
    "src/central_logger/controllers/dashboard_controller.py",
    "src/central_logger/controllers/settings_controller.py",
    "src/central_logger/viewmodels/__init__.py",
    "src/central_logger/viewmodels/app_state.py",
    "src/central_logger/viewmodels/logger_list_model.py",
    "src/central_logger/viewmodels/recent_events_model.py",
    "src/central_logger/services/__init__.py",
    "src/central_logger/services/modbus_manager.py",
    "src/central_logger/db/__init__.py",
    "src/central_logger/db/session.py",
    "src/central_logger/utils/native_libs.py",
]
